# recastnavigation

./: CMakeLists.txt
Detour/Include/: DetourNavMesh.h
RecastUnityPlugin/: CMakeLists.txt  RecastUnityPlugin.vcxproj  premake5.lua
RecastUnityPlugin/Include/: BlockArea.h  BuildContext.h  ChunkyTriMesh.h  NavMeshBuildConfig.h  NavMeshBuildData.h  NavMeshBuildUtility.h  NavMeshDebugDrawUtility.h  NavMeshInputGeometry.h  PerfTimer.h  RecastUnityPluginManager.h
RecastUnityPlugin/Source/: BuildContext.cpp  ChunkyTriMesh.cpp  NavMeshBuildUtility.cpp  NavMeshDebugDrawUtility.cpp  PerfTimer.cpp  RecastUnityPluginManager.cpp  dllmain.cpp
